<resources>

    <string name="app_name">白羊座客户端</string>
    <string name="home_button_text">点击购买</string>
    <string name="menu_button_up">上一页</string>
    <string name="menu_button_down">下一页</string>
    <string name="menu_title_text_view">今日商品</string>
    <string name="popup_pay_button_text">取消付款</string>

    <string name="navigation_menu_deliver">补货</string>
    <string name="navigation_menu_setting">设置</string>

    <string name="deliver_menu_quit">退出</string>
    <string name="deliver_menu_quit_all">退出整个系统</string>

    <string name="deliver_menu_replenish_text">获取补货清单</string>
    <string name="deliver_menu_replenish_finish_text">补货完成</string>

    <string name="popup_change_add">增加</string>
    <string name="popup_change_sub">减少</string>
    <string name="popup_change_cancel">取消</string>
    <string name="popup_change_ok">确定</string>

    <string name="popup_login_title">补货管理登陆</string>
    <string name="popup_login_id_hint">请输入账号</string>
    <string name="popup_login_id_pass_word_hint">请输入密码</string>
    <string name="popup_login_cancel">取消</string>
    <string name="popup_login_ok">确定</string>

    <string name="popup_free_hint">请输入验证码</string>

    <string name="item_empty">已售空</string>

    <string-array name="url_array">
        <item>http://test.hontech-rdcenter.com:8080</item>
        <item>http://hfrd.hontech-rdcenter.com:8080</item>
    </string-array>

</resources>
