<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/y75"
        android:background="@android:color/holo_purple"
        android:id="@+id/id_debug_text_view_title"
        android:textSize="@dimen/x30"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:text="MAC=00:11:22:33:44:55, ID=ARIES" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x75"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/id_debug_tab_layout"
        app:tabMode="fixed"
        app:tabGravity="center">

    </android.support.design.widget.TabLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>

    <android.support.v4.view.ViewPager
        android:layout_width="@dimen/x1000"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:id="@+id/id_debug_view_pager"
        android:layout_weight="1">
    </android.support.v4.view.ViewPager>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y100"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/y20"
        android:layout_marginBottom="@dimen/y20">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/x20"
            android:layout_marginEnd="@dimen/x20"
            android:background="@drawable/selector_debug_button"
            android:textSize="@dimen/x30"
            android:textColor="@android:color/white"
            android:text="@string/deliver_menu_replenish_text"
            android:id="@+id/id_debug_acquire_deliver_button"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/x20"
            android:background="@drawable/selector_debug_button"
            android:textSize="@dimen/x30"
            android:textColor="@android:color/white"
            android:id="@+id/id_debug_deliver_finish_button"
            android:text="@string/deliver_menu_replenish_finish_text"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/x20"
            android:background="@drawable/selector_debug_button"
            android:textSize="@dimen/x30"
            android:textColor="@android:color/white"
            android:id="@+id/id_debug_deliver_quit_button"
            android:text="@string/deliver_menu_quit"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/x20"
            android:background="@drawable/selector_debug_button"
            android:textSize="@dimen/x30"
            android:textColor="@android:color/white"
            android:id="@+id/id_debug_deliver_quit_all_button"
            android:text="@string/deliver_menu_quit_all"
            />

    </LinearLayout>

</LinearLayout>