<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="@dimen/x800"
        android:layout_height="@dimen/y1400"
        android:background="@drawable/shape_login"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/y150"
            android:layout_marginTop="@dimen/y50"
            android:gravity="center"
            android:text="@string/popup_login_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/x75" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y150"
            android:layout_marginEnd="@dimen/x50"
            android:layout_marginStart="@dimen/x50"
            android:layout_marginTop="@dimen/y50"
            android:background="@drawable/shape_login_rounded"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/x100"
                android:layout_height="@dimen/y100"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/x50"
                android:scaleType="fitXY"
                android:src="@drawable/ic_id" />

            <EditText
                android:id="@+id/id_popup_login_id_edit_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:focusable="false"
                android:gravity="center"
                android:hint="@string/popup_login_id_hint"
                android:inputType="number"
                android:textSize="@dimen/x50" />

            <ImageView
                android:id="@+id/id_popup_login_id_image_view"
                android:layout_width="@dimen/x100"
                android:layout_height="@dimen/y100"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/x50"
                android:src="@drawable/ic_clear" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y150"
            android:layout_marginEnd="@dimen/x50"
            android:layout_marginStart="@dimen/x50"
            android:layout_marginTop="@dimen/y50"
            android:background="@drawable/shape_login_rounded"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/x100"
                android:layout_height="@dimen/y100"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/x50"
                android:scaleType="fitXY"
                android:src="@drawable/ic_password" />

            <EditText
                android:id="@+id/id_popup_login_password_edit_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:focusable="false"
                android:hint="@string/popup_login_id_pass_word_hint"
                android:inputType="numberPassword"
                android:textSize="@dimen/x50" />

            <ImageView
                android:id="@+id/id_popup_login_password_image_view"
                android:layout_width="@dimen/x100"
                android:layout_height="@dimen/y100"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/x50"
                android:src="@drawable/ic_clear" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="@dimen/x700"
            android:layout_height="@dimen/y700"
            android:layout_marginTop="@dimen/y50"
            android:layout_gravity="center_horizontal"
            android:id="@+id/id_popup_login_key_recycler_view">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</FrameLayout>


